// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / ShowMoreButton Aligned Left 1`] = `
Array [
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    Ex fugit nulla veritatis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur distinctio dolore iure nihil quam quis vel. Aut autem consequatur ex impedit magni molestias obcaecati omnis possimus! Consectetur distinctio dolore iure nihil quam quis vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda corporis dolorum, facilis id illum ipsam ipsum maxime modi necessitatibus nemo nostrum odio odit officia praesentium provident quod totam vero.
  </span>,
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c2"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Show more
        <svg
          aria-hidden="true"
          className="c3 c4 c5"
          direction="down"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 16 16"
        >
          <polygon
            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
          />
        </svg>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules / ShowMoreButton Default 1`] = `
.c0 {
  position: relative;
  overflow: visible;
  max-height: 200px;
}

.c0::before {
  display: none;
  content: '';
  width: 100%;
  height: 40px;
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 0;
  background: linear-gradient(rgba(255,255,255,0),#FFFFFF);
}

<div
  className="c0"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget pharetra nisi, sed scelerisque lectus. Sed at sem at elit efficitur vestibulum quis id orci. Nunc faucibus enim at nulla porta, vitae luctus lacus fringilla. Cras ut augue pharetra, malesuada purus blandit, dapibus est. Donec dictum dapibus diam tempus luctus. Maecenas lobortis cursus nisl, et convallis orci interdum at. Etiam lacinia tincidunt massa. Curabitur sit amet dolor eu magna condimentum tempus ut eget dolor. Aliquam vehicula mattis ullamcorper. Mauris porta eget tellus eget ultricies. Donec felis magna, imperdiet ac mauris sit amet, maximus vehicula odio. Maecenas vitae nunc non nisi molestie blandit sed vitae lectus. Suspendisse at finibus ex. Fusce accumsan ante faucibus ante porta, sit amet congue lacus venenatis. Sed eu ultricies nisl. Proin sapien urna, molestie eget ullamcorper eget, rhoncus eu ante. Vestibulum non urna vel diam cursus pretium a ut turpis. Nulla cursus neque velit, non pharetra leo commodo a. Proin risus est, convallis nec mauris non, lobortis vulputate nisl. Praesent hendrerit elit in nisl pharetra, a volutpat eros lacinia.
</div>
`;

exports[`Storyshots Molecules / ShowMoreButton Disabled 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #A0A09B;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: not-allowed;
  font-weight: inherit;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  margin-left: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={false}
      className="NormalizedButton__Button-ey7f5x-0 c2"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Show more
      <svg
        aria-hidden="true"
        className="c3 c4 c5"
        direction="down"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 16 16"
      >
        <polygon
          points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules / ShowMoreButton Loading 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  display: inline-block;
  -webkit-animation: spinner 0.6s linear infinite;
  animation: spinner 0.6s linear infinite;
}

.c4 {
  display: block;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={false}
      className="NormalizedButton__Button-ey7f5x-0 c2"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          className="c4"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-37val-Spinner-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#0046FF"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#0046FF"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-37val-Spinner-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#0046FF"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#0046FF"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-37val-Spinner-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-37val-Spinner-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules / ShowMoreButton With Custom Cut Off Height 1`] = `
.c0 {
  position: relative;
  overflow: visible;
  max-height: 100px;
}

.c0::before {
  display: none;
  content: '';
  width: 100%;
  height: 40px;
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 0;
  background: linear-gradient(rgba(255,255,255,0),#FFFFFF);
}

<div
  className="c0"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget pharetra nisi, sed scelerisque lectus. Sed at sem at elit efficitur vestibulum quis id orci. Nunc faucibus enim at nulla porta, vitae luctus lacus fringilla. Cras ut augue pharetra, malesuada purus blandit, dapibus est. Donec dictum dapibus diam tempus luctus. Maecenas lobortis cursus nisl, et convallis orci interdum at. Etiam lacinia tincidunt massa. Curabitur sit amet dolor eu magna condimentum tempus ut eget dolor. Aliquam vehicula mattis ullamcorper. Mauris porta eget tellus eget ultricies. Donec felis magna, imperdiet ac mauris sit amet, maximus vehicula odio. Maecenas vitae nunc non nisi molestie blandit sed vitae lectus. Suspendisse at finibus ex. Fusce accumsan ante faucibus ante porta, sit amet congue lacus venenatis. Sed eu ultricies nisl. Proin sapien urna, molestie eget ullamcorper eget, rhoncus eu ante. Vestibulum non urna vel diam cursus pretium a ut turpis. Nulla cursus neque velit, non pharetra leo commodo a. Proin risus est, convallis nec mauris non, lobortis vulputate nisl. Praesent hendrerit elit in nisl pharetra, a volutpat eros lacinia.
</div>
`;
